--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "install-server": "npm install --prefix server",
     "install-client": "npm install --prefix client",
-    "install": "npm-run-all intall-server install client",
+    "install": "npm-run-all intall server install client",
     "server": "npm run watch --prefix server",
     "client": "npm start --prefix client",
     "watch": "concurrently \"npm run server\" \"npm run client\"",
