--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "npm-run-all": "^4.1.5"
+  }
 }
